--- a/products/templates/input.html
+++ b/products/templates/input.html
@@ -2,4 +2,10 @@
 
 {% block content %}
   <h1>Input Page</h1>
+
+  <form action='.' method='POST'>{% csrf_token %}
+    <p>{{ form.as_p }}</p>
+    <input type='submit' value='Save' />
+  </form>
+
 {% endblock %}
