--- a/products/templates/base.html
+++ b/products/templates/base.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  {% load static %}
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="{% static 'products/css/bootstrap.css' %}">
     <title>Catalogue System</title>
   </head>
   <body>
