--- a/products/templates/input.html
+++ b/products/templates/input.html
@@ -1,11 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Input Page</h1>
-
-  <form action='.' method='POST'>{% csrf_token %}
-    <p>{{ form.as_p }}</p>
-    <input type='submit' value='Save' />
-  </form>
-
+  <div class="container my-5 p-5">
+    <div class="card p-5 m-5">
+      <div align="center">
+        <h2>Input Page</h2>
+      </div>
+      <div class="center p-5">
+        <form action='.' method='POST'>{% csrf_token %}
+          {{ form.as_p }}
+          <div align="center">
+            <input class="btn btn-primary" type='submit' value='Save' />
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 {% endblock %}
