--- a/products/templates/input.html
+++ b/products/templates/input.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
   <div class="container my-5 p-5">
     <div class="card p-5 m-5">
@@ -8,9 +10,9 @@
       </div>
       <div class="center p-5">
         <form action='.' method='POST'>{% csrf_token %}
-          {{ form.as_p }}
+          {{ form|crispy }}
           <div align="center">
-            <input class="btn btn-primary" type='submit' value='Save' />
+            <input action='//' class="btn btn-primary" type='submit' value='Save' />
           </div>
         </form>
       </div>
