Added HTTPResponseRedirect on Input Page

--- a/products/templates/input.html
+++ b/products/templates/input.html
@@ -12,7 +12,7 @@
         <form action='.' method='POST'>{% csrf_token %}
           {{ form|crispy }}
           <div align="center">
-            <input action='//' class="btn btn-primary" type='submit' value='Save' />
+            <input class="btn btn-primary" type='submit' value='Save' />
           </div>
         </form>
       </div>
